Fix calendar numbers wrap issue

--- a/assets/css/ie.css
+++ b/assets/css/ie.css
@@ -3947,6 +3947,7 @@ table.wp-calendar-table th {
 	text-align: center;
 	line-height: 2;
 	vertical-align: middle;
+	word-break: normal;
 }
 
 table.wp-calendar-table th {
